fixed card overflow

--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -6,7 +6,7 @@
   border-width: 2px;
   border-radius: 5px;
   width: 30rem;
-  height: 14rem;
+  /* height: 14rem; */
   margin-bottom: 50px;
 }
 
